--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,13 +5,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/background"
     tools:context=".MainActivity">
+
+    <Button
+        android:id="@+id/bt_triangle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="삼각형"/>
 
     <TextView
         android:id="@+id/title"
         android:gravity="center"
-        android:textSize="50sp"
-        android:layout_marginTop="20dp"
+        android:textSize="70sp"
+        android:layout_marginTop="270dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/title"/>
@@ -19,7 +26,7 @@
     <TextView
         android:id="@+id/sub_title"
         android:gravity="center"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/sub_title"/>
