--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,14 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/background"
+    android:background="@drawable/main_background"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/bt_triangle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="삼각형"/>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/title"
