--- a/app/src/main/res/layout/activity_pick_month.xml
+++ b/app/src/main/res/layout/activity_pick_month.xml
@@ -4,6 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@drawable/background"
     tools:context=".PickMonthActivity">
 
+    <TextView
+        android:id="@+id/month"
+        android:textSize="50sp"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/month"/>
 </LinearLayout>
