--- a/app/src/main/res/layout/activity_pick_month.xml
+++ b/app/src/main/res/layout/activity_pick_month.xml
@@ -15,4 +15,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/month"/>
+
+    <View
+        android:layout_gravity="center"
+        android:layout_width="160dp"
+        android:layout_height="2px"
+        android:background="#000000"/>
 </LinearLayout>
