--- a/app/src/main/res/layout/activity_pick_month.xml
+++ b/app/src/main/res/layout/activity_pick_month.xml
@@ -23,11 +23,161 @@
         android:layout_marginTop="5dp"
         android:background="#000000"/>
 
-    <View
-        android:id="@+id/background"
-        android:background="#FF9B9B"
+    <FrameLayout
         android:layout_gravity="center"
+        android:background="#EC8F8F"
         android:layout_marginTop="20dp"
         android:layout_width="370dp"
-        android:layout_height="615dp"/>
+        android:layout_height="615dp">
+
+        <GridLayout
+            android:layout_marginTop="100dp"
+            android:rowCount="4"
+            android:columnCount="1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <Button
+                    android:id="@+id/btn_1"
+                    android:textSize="55sp"
+                    android:textColor="#000000"
+                    android:background="#00ff0000"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:text="@string/btn_1"/>
+
+                <Button
+                    android:id="@+id/btn_2"
+                    android:textSize="55sp"
+                    android:textColor="#000000"
+                    android:background="#00ff0000"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:text="@string/btn_2"/>
+
+                <Button
+                    android:id="@+id/btn_3"
+                    android:textSize="55sp"
+                    android:textColor="#000000"
+                    android:background="#00ff0000"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:text="@string/btn_3"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_marginTop="15dp"
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <Button
+                    android:id="@+id/btn_4"
+                    android:textSize="55sp"
+                    android:textColor="#000000"
+                    android:background="#00ff0000"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:text="@string/btn_4"/>
+
+                <Button
+                    android:id="@+id/btn_5"
+                    android:textSize="55sp"
+                    android:textColor="#000000"
+                    android:background="#00ff0000"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:text="@string/btn_5"/>
+
+                <Button
+                    android:id="@+id/btn_6"
+                    android:textSize="55sp"
+                    android:textColor="#000000"
+                    android:background="#00ff0000"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:text="@string/btn_6"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_marginTop="15dp"
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <Button
+                    android:id="@+id/btn_7"
+                    android:textSize="55sp"
+                    android:textColor="#000000"
+                    android:background="#00ff0000"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:text="@string/btn_7"/>
+
+                <Button
+                    android:id="@+id/btn_8"
+                    android:textSize="55sp"
+                    android:textColor="#000000"
+                    android:background="#00ff0000"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:text="@string/btn_8"/>
+
+                <Button
+                    android:id="@+id/btn_9"
+                    android:textSize="55sp"
+                    android:textColor="#000000"
+                    android:background="#00ff0000"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:text="@string/btn_9"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_marginTop="15dp"
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <Button
+                    android:id="@+id/btn_10"
+                    android:textSize="51sp"
+                    android:textColor="#000000"
+                    android:background="#00ff0000"
+                    android:layout_width="100dp"
+                    android:layout_height="80dp"
+                    android:text="@string/btn_10"/>
+
+                <Button
+                    android:id="@+id/btn_11"
+                    android:textSize="51sp"
+                    android:textColor="#000000"
+                    android:background="#00ff0000"
+                    android:layout_width="100dp"
+                    android:layout_height="80dp"
+                    android:text="@string/btn_11"/>
+
+                <Button
+                    android:id="@+id/btn_12"
+                    android:textSize="51sp"
+                    android:textColor="#000000"
+                    android:background="#00ff0000"
+                    android:layout_width="100dp"
+                    android:layout_height="80dp"
+                    android:text="@string/btn_12"/>
+            </LinearLayout>
+        </GridLayout>
+
+    </FrameLayout>
+
+
 </LinearLayout>
