--- a/app/src/main/res/layout/activity_december.xml
+++ b/app/src/main/res/layout/activity_december.xml
@@ -1,9 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@drawable/background"
     tools:context=".December">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/month"
+        android:textSize="50sp"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/month"/>
+
+    <View
+        android:layout_gravity="center"
+        android:layout_width="170dp"
+        android:layout_height="2px"
+        android:layout_marginTop="5dp"
+        android:background="#000000"/>
+
+    <FrameLayout
+        android:layout_gravity="center"
+        android:background="#EC8F8F"
+        android:layout_marginTop="20dp"
+        android:layout_width="370dp"
+        android:layout_height="615dp">
+
+
+    </FrameLayout>
+</LinearLayout>
