--- a/app/src/main/res/layout/activity_pick_month.xml
+++ b/app/src/main/res/layout/activity_pick_month.xml
@@ -50,7 +50,7 @@
                     android:background="#00ff0000"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
-                    android:text="@string/btn_1"/>
+                    android:text="1"/>
 
                 <Button
                     android:id="@+id/btn_2"
@@ -59,7 +59,7 @@
                     android:background="#00ff0000"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
-                    android:text="@string/btn_2"/>
+                    android:text="2"/>
 
                 <Button
                     android:id="@+id/btn_3"
@@ -68,7 +68,7 @@
                     android:background="#00ff0000"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
-                    android:text="@string/btn_3"/>
+                    android:text="3"/>
             </LinearLayout>
 
             <LinearLayout
@@ -85,7 +85,7 @@
                     android:background="#00ff0000"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
-                    android:text="@string/btn_4"/>
+                    android:text="4"/>
 
                 <Button
                     android:id="@+id/btn_5"
@@ -94,7 +94,7 @@
                     android:background="#00ff0000"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
-                    android:text="@string/btn_5"/>
+                    android:text="5"/>
 
                 <Button
                     android:id="@+id/btn_6"
@@ -103,7 +103,7 @@
                     android:background="#00ff0000"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
-                    android:text="@string/btn_6"/>
+                    android:text="6"/>
             </LinearLayout>
 
             <LinearLayout
@@ -120,7 +120,7 @@
                     android:background="#00ff0000"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
-                    android:text="@string/btn_7"/>
+                    android:text="7"/>
 
                 <Button
                     android:id="@+id/btn_8"
@@ -129,7 +129,7 @@
                     android:background="#00ff0000"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
-                    android:text="@string/btn_8"/>
+                    android:text="8"/>
 
                 <Button
                     android:id="@+id/btn_9"
@@ -138,7 +138,7 @@
                     android:background="#00ff0000"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
-                    android:text="@string/btn_9"/>
+                    android:text="9"/>
             </LinearLayout>
 
             <LinearLayout
@@ -155,7 +155,7 @@
                     android:background="#00ff0000"
                     android:layout_width="100dp"
                     android:layout_height="80dp"
-                    android:text="@string/btn_10"/>
+                    android:text="10"/>
 
                 <Button
                     android:id="@+id/btn_11"
@@ -164,7 +164,7 @@
                     android:background="#00ff0000"
                     android:layout_width="100dp"
                     android:layout_height="80dp"
-                    android:text="@string/btn_11"/>
+                    android:text="11"/>
 
                 <Button
                     android:id="@+id/btn_12"
@@ -173,7 +173,7 @@
                     android:background="#00ff0000"
                     android:layout_width="100dp"
                     android:layout_height="80dp"
-                    android:text="@string/btn_12"/>
+                    android:text="12"/>
             </LinearLayout>
         </GridLayout>
 
