--- a/app/src/main/res/layout/activity_september.xml
+++ b/app/src/main/res/layout/activity_september.xml
@@ -10,24 +10,26 @@
 
     <TextView
         android:id="@+id/month"
-        android:textSize="48sp"
+        android:textSize="50sp"
         android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="September"/>
+        android:text="@string/month"/>
 
     <View
         android:layout_gravity="center"
-        android:layout_width="220dp"
+        android:layout_width="170dp"
         android:layout_height="2px"
         android:layout_marginTop="5dp"
         android:background="#000000"/>
 
-    <View
-        android:id="@+id/background"
-        android:layout_width="370dp"
-        android:layout_height="615dp"
+    <FrameLayout
         android:layout_gravity="center"
+        android:background="#EC8F8F"
         android:layout_marginTop="20dp"
-        android:background="#EC8F8F"/>
+        android:layout_width="370dp"
+        android:layout_height="615dp">
+
+
+    </FrameLayout>
 </LinearLayout>
