--- a/app/src/main/res/layout/activity_january1.xml
+++ b/app/src/main/res/layout/activity_january1.xml
@@ -17,7 +17,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginLeft="12dp"
             android:textSize="15sp"
-            android:background=""
+            android:background="#00000000"
             android:layout_width="75dp"
             android:layout_height="55dp"
             android:text="back"/>
@@ -34,7 +34,7 @@
             android:id="@+id/save_button"
             android:layout_marginTop="8dp"
             android:layout_marginRight="12dp"
-            android:background=""
+            android:background="#00000000"
             android:layout_gravity="right"
             android:layout_width="75dp"
             android:layout_height="55dp"
