--- a/app/src/main/res/layout/activity_june.xml
+++ b/app/src/main/res/layout/activity_june.xml
@@ -8,20 +8,29 @@
     android:background="@drawable/background"
     tools:context=".June">
 
-    <TextView
-        android:id="@+id/month"
-        android:textSize="50sp"
-        android:gravity="center"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/june"/>
+        android:layout_height="70dp">
 
-    <View
-        android:layout_gravity="center"
-        android:layout_width="170dp"
-        android:layout_height="2px"
-        android:layout_marginTop="5dp"
-        android:background="#000000"/>
+        <Button
+            android:id="@+id/back_button"
+            android:layout_marginTop="18dp"
+            android:layout_marginLeft="12dp"
+            android:textSize="15sp"
+            android:background="#00000000"
+            android:layout_width="75dp"
+            android:layout_height="55dp"
+            android:text="back"/>
+
+        <TextView
+            android:id="@+id/month"
+            android:textSize="45sp"
+            android:layout_marginTop="10dp"
+            android:layout_gravity="center"
+            android:layout_width="170dp"
+            android:layout_height="wrap_content"
+            android:text="   June"/>
+    </FrameLayout>
 
     <FrameLayout
         android:layout_gravity="center"
